responsiveness + overflow-x fix

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,13 @@
 
 html {
   font-family: Verdana, sans-serif;
+  min-width: 300px;
+  overflow-x: hidden;
+}
+
+body {
+  overflow-x: hidden;
+  overflow-x: clip !important;
 }
 
 /* NAVBAR */
@@ -214,7 +221,7 @@ html {
 }
 
 .slide-track {
-  animation: scroll 40s linear infinite;
+  animation: scroll 18s linear infinite;
   display: flex;
   width: calc(250px * 14);
 }
@@ -464,6 +471,42 @@ footer .copyright {
   .footer-container .nav-links .link-items li {
     font-size: 12px;
   }
+
+  .slider {
+    width: 600px;
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  .slider {
+    width: 400px;
+  }
+}
+
+@media only screen and (max-width: 440px) {
+  .slider {
+    width: 300px;
+  }
+  .gallery-container .gallery-cards .card {
+    width: 350px;
+    height: 240px;
+    background-color: #ededed;
+    border-radius: 15px;
+    transition: 1s;
+  }
+  .gallery-container .gallery-cards img {
+    width: 350px;
+    height: 200px;
+    border-radius: 15px;
+  }
+
+  .designer-container .designer-button {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+  }
 }
 
 @media only screen and (max-width: 350px) {
@@ -517,5 +560,55 @@ footer .copyright {
 
   .designer-container .designer-subtitle {
     font-size: 15px;
+  }
+  .slider {
+    width: 250px;
+  }
+
+  .gallery-container .gallery-cards .card {
+    width: 250px;
+    height: 140px;
+    background-color: #ededed;
+    border-radius: 15px;
+    transition: 1s;
+  }
+  .gallery-container .gallery-cards img {
+    width: 250px;
+    height: 100px;
+    border-radius: 15px;
+  }
+
+  .designer-container {
+    padding: 5px 5px;
+    background-color: #ffda60;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+  }
+
+  .designer-container .designer-title {
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+      "Lucida Sans", Arial, sans-serif;
+    font-size: 1.1rem;
+    text-align: center;
+    color: #000a25;
+    margin-bottom: 20px;
+    margin-top: 50px;
+  }
+
+  .designer-container .designer-subtitle {
+    text-align: center;
+    font-size: 16px;
+    margin-bottom: 20px;
+  }
+
+  .designer-container .designer-button {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
   }
 }
